--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
             </div>
     </section>
     </div>-->
-    <div class="text center col-sm-6">Hi 👋,I'm <span>John Doe</span>
+    <div class="text center col-sm-6">Hi, I'm <span>Ellen Roper</span>
         <div class="center">
             <div>
-                <img src="assets/images/dp.svg" alt="" class="rounded-circle" height="200" width="200">
+                <img src="assets/images/ellen.png" alt="" class="rounded-circle" height="200" width="200">
             </div>
                 <p>I am into &nbsp;
                 <h1 class="animated-text"
-                    data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></h1>
+                    data-words="Designing, UI/UX, Wearables, Web Development"></h1>
                 </p>
             <div>
                 <div class="social-icons">
