--- a/index.html
+++ b/index.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
 
 <head>
     <title>Ellen Roper | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords"
-        content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
-    <meta name="description"
-        content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
 
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/">
-    <meta property="og:title" content="John Doe | Home">
-    <meta property="og:description"
-        content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
-
-    <meta name="application-name" content="John Doe | Home" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Home" />
-    <meta name="summary"
-        content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
+    <meta name="application-name" content="Ellen Roper | Home" />
+    <meta name="apple-mobile-web-app-title" content="Ellen Roper | Home" />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <!--Import Google Icon Font-->
@@ -59,90 +44,36 @@
             <section class="center">
                 <div id="particles-js"></div>
             </section>
-      </div>
+        </div>
     </div>
-
-    <!--About Section-->
-
-    <!--<div class="section bg-blue">
-      <section id="about">
-            <h1 class="h1 ml-5 mb-5 text-right white-text">So what am I upto ?
-                <hr class="bg-white">
-            </h1>
-			<div class="row">
-                <div class="col-sm-3 ml-5">
-                    <img src="assets/images/upto.svg" alt="what am I upto" class="img-fluid bg-transparent">
-                </div>
-                <div class="col-sm-2">
-                    <div class="text-center white-text"><i class="fa fa-4x fa-user-friends"></i></div>
-                    <h5 class="mt-3 text-center font-weight-bold white-text">Mentoring</h5>
-                    <p class="text-center white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et lectus urna. Quisque ligula sapien, mollis non dapibus at, facilisis eget urna. Praesent volutpat condimentum ante vitae convallis. </p>
-                </div>
-                <div class="col-sm-2">
-                    <div class="text-center white-text"><i class="fa fa-4x fa-search"></i></div>
-                    <h5 class="mt-3 text-center font-weight-bold white-text">Academic Reasearch</h5>
-                    <p class="text-center white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et lectus urna. Quisque ligula sapien, mollis non dapibus at, facilisis eget urna. Praesent volutpat condimentum ante vitae convallis. </p>
-                </div>
-                <div class="col-sm-2">
-                    <div class="text-center white-text"><i class="fa fa-4x fa-laptop"></i></div>
-                    <h5 class="mt-3 text-center font-weight-bold white-text">Building Softwares</h5>
-                    <p class="text-center white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et lectus urna. Quisque ligula sapien, mollis non dapibus at, facilisis eget urna. Praesent volutpat condimentum ante vitae convallis. </p>
-                </div>
-                <div class="col-sm-2">
-                    <div class="text-center white-text"><i class="fa fa-4x fa-code-branch"></i></div>
-                    <h5 class="mt-3 text-center font-weight-bold white-text">Open Source Developer</h5>
-                    <p class="text-center white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et lectus urna. Quisque ligula sapien, mollis non dapibus at, facilisis eget urna. Praesent volutpat condimentum ante vitae convallis. </p>
-                </div>
-            </div>
-    </section>
-    </div>-->
-    <div class="text center col-sm-6">Hi, I'm <span>Ellen Roper</span>
+    <div class="text center col-sm-6">
         <div class="center">
             <div>
-                <img src="assets/images/ellen.png" alt="" class="rounded-circle" height="200" width="200">
+                <img src="assets/images/logos/erlogoLightwithnameCropped.png" width="600px">
             </div>
                 <p>I am into &nbsp;
                 <h1 class="animated-text"
                     data-words="Designing, UI/UX, Wearables, Web Development"></h1>
                 </p>
             <div>
-                <div class="social-icons">
-
-                    <a class="social-icon twitter" href="" target="_blank" rel="author">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-
-                    <a class="social-icon dribbble" href="" target="_blank" rel="author">
-                        <i class="fab fa-dribbble"></i>
-                    </a>
-
-                    <a class="social-icon linkedin" href="" target="_blank" rel="author">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-
-                    <a class="social-icon medium" href="" target="_blank" rel="author">
-                        <i class="fab fa-medium-m"></i>
-                    </a>
-
-                    <a class="social-icon kaggle" href="" target="_blank" rel="author">
-                        <i class="fab fa-kaggle"></i>
-                    </a>
-
-                    <a class="social-icon github" href="" target="_blank" rel="author">
-                        <i class="fab fa-github"></i>
-                    </a>
-
-                </div>
             </div>
         </div>
     </div>
+        <!--About Section-->
+        <div>
+            <section id="about">
+                <h1 class="h1 ml-5 mb-5 text-right white-text">So what am I up to?
+                    <hr class="bg-white">
+                </h1>
+            </section>
+        </div>
 
     <!-- Dynamic footer section -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167979537-2"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167979537-2"></script> -->
     <!-- Fetching our Google Tag Manager -->
 
     <!--JavaScript at end of body for optimized loading-->
